@@ -6478,6 +6478,19 @@
 	      <signal name="clicked" handler="on_open_ok_clicked" object="opendb"/>
 	    </widget>
 	  </child>
+
+	  <child>
+	    <widget class="GtkButton" id="button168">
+	      <property name="visible">True</property>
+	      <property name="can_default">True</property>
+	      <property name="can_focus">True</property>
+	      <property name="label">gtk-help</property>
+	      <property name="use_stock">True</property>
+	      <property name="relief">GTK_RELIEF_NORMAL</property>
+	      <property name="response_id">-11</property>
+	      <signal name="clicked" handler="on_open_help_clicked" last_modification_time="Fri, 05 Dec 2003 20:06:22 GMT"/>
+	    </widget>
+	  </child>
 	</widget>
 	<packing>
 	  <property name="padding">0</property>
